* some refactoring of path planning * improved demo bot * fixed botGUI restarting